--- a/package.json
+++ b/package.json
@@ -1,9 +1,22 @@
 {
+  "name": "ts-nodejs-it-blog",
+  "description": "some text",
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "Alexander Makarov",
+  "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.13",
+    "body-parser": "^1.20.0",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
     "markdown-it": "^13.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.7.16",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
+    "eslint": "^8.23.0",
     "typescript": "^4.8.3"
   },
   "scripts": {
